fix: fixed layout shifting [WTEL-2406]

--- a/src/modules/start-page/css/_start-category.scss
+++ b/src/modules/start-page/css/_start-category.scss
@@ -12,6 +12,7 @@
 }
 
 .start-nav__category-option {
+  @extend %typo-body-1;
   box-sizing: border-box;
   text-align: left;
   display: flex;
